# not-webusb-rs

./: .gitignore  Cargo.toml  flash_example.sh  index.html  readme.md  rust-toolchain.toml  serve.sh
.cargo/: config.toml
.github/workflows/: publish_to_pages.yml  testing.yml
examples/: pi_pico.rs  pi_pico_origin_filter.rs
examples/pico/: Cargo.toml
examples/pico/.cargo/: config.toml
examples/pico/src/: lib.rs
integration_tests/: readme.md
src/: ctaphid.rs  fmt.rs  lib.rs  u2f.rs
tests/: Cargo.toml
tests/tests/: test.rs
web/: blinker.html  index.html  not_webusb.js  rot13.html
