[package]
name = "not-webusb"
description = "Communicate between a webpage and a usb device without webusb"
license = "MIT"
readme = "readme.md"
keywords = ["usb-device", "not", "webusb", "u2f"]
categories = ["no-std", "embedded"]
repository = "https://github.com/rukai/not-webusb"
version = "0.1.0"
edition = "2024"

[dependencies]
usb-device = "0.3"
log = { version = "0.4", optional = true }
defmt = { version = "1.0", optional = true }
packed_struct = { version = "0.10", default-features = false }
heapless = "0.8"
frunk = { version = "0.4", default-features = false }
num_enum = { version = "0.7", default-features = false }
fugit = "0.3"
option-block = "0.3"
usbd-human-interface-device = "0.6.0"

[dev-dependencies]
not-webusb = { path = ".", features = ["log"] }

cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
pio = "0.2.1"
rp-pico = "0.9.0"
rp2040-hal = "0.10.0"

[features]
defmt = ["dep:defmt", "usb-device/defmt"]
