[package]
name = "not-webusb"
description = "Communicate between a webpage and a usb device without webusb"
license = "MIT"
readme = "readme.md"
keywords = ["usb-device", "not", "webusb", "u2f"]
categories = ["no-std", "embedded"]
repository = "https://github.com/rukai/not-webusb"
version = "0.1.0"
edition = "2024"

[dependencies]
usb-device = "0.3"
log = { version = "0.4", optional = true }
defmt = { version = "1.0", optional = true }
packed_struct = { version = "0.10", default-features = false }
heapless = "0.8"
frunk = { version = "0.4", default-features = false }
num_enum = { version = "0.7", default-features = false }
fugit = "0.3"
option-block = "0.3"
usbd-human-interface-device = "0.6.0"

[dev-dependencies]
not-webusb = { path = ".", features = ["log"] }
arrayvec = { version = "0.7.6", default-features = false }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
pio = "0.2.1"
rp-pico = "0.9.0"
bbqueue = { version = "0.5.1", features = ["thumbv6"] }
rp2040-hal = { version = "0.10.0", features = ["critical-section-impl"] }

# defmt
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }
usb-device = { version = "0.3", features = ["defmt"] }
usbd-human-interface-device = { version = "0.6", features = ["defmt"] }

[features]
defmt = ["dep:defmt", "usb-device/defmt", "usbd-human-interface-device/defmt"]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false