[package]
name = "not-webusb"
description = "Communicate between a webpage and a usb device without webusb"
license = "MIT"
readme = "readme.md"
keywords = ["usb-device", "not", "webusb", "u2f", "fido"]
categories = ["no-std", "embedded"]
repository = "https://github.com/rukai/not-webusb"
version = "0.1.0"
edition = "2024"

[dependencies]
usb-device = "0.3"
log = { version = "0.4", optional = true }
defmt = { version = "1.0", optional = true }
packed_struct = { version = "0.10", default-features = false }
heapless = "0.8"
frunk = { version = "0.4", default-features = false }
num_enum = { version = "0.7", default-features = false }
fugit = "0.3"
option-block = "0.3"
usbd-human-interface-device = "0.6.0"
arrayvec = { version = "0.7.6", default-features = false }
bbqueue = { version = "0.5.1", features = ["thumbv6", "defmt_0_3"] }
embedded-hal = "1.0.0"

[features]
defmt = [
    "dep:defmt",
    "usb-device/defmt",
    "usbd-human-interface-device/defmt"
]

[dev-dependencies]
authenticator = { version = "0.4.0", default-features = false, features = ["crypto_dummy"] }
env_logger = "0.11.8"
pretty_assertions = "1.4.1"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false