[package]
name = "pico_example"
description = "Communicate between a webpage and a usb device without webusb"
license = "MIT"
readme = "readme.md"
keywords = ["usb-device", "not", "webusb", "u2f", "fido"]
categories = ["no-std", "embedded"]
repository = "https://github.com/rukai/not-webusb"
version = "0.1.0"
edition = "2024"

[dependencies]
fugit = "0.3"
not-webusb = { path = "../.." }
arrayvec = { version = "0.7.6", default-features = false }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
rp-pico = "0.9.0"
rp2040-hal = { version = "0.10.0", features = ["critical-section-impl"] }

# defmt
defmt = { version = "1", optional = true }
defmt-rtt = { version = "1", optional = true }
panic-probe = { version = "1" }
usb-device = { version = "0.3" }
usbd-human-interface-device = { version = "0.6" }

[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "not-webusb/defmt",
    "panic-probe/print-defmt",
    "usb-device/defmt",
    "usbd-human-interface-device/defmt"
]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
